add body for swag comment login route
